k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
spec:
  selector:
    app: odoo
  ports:
    - name: http
      port: 80
      targetPort: 8069
    - name: longpolling
      port: 8072
      targetPort: 8072
